# GeometryLib

./: CMakeLists.txt  Doxyfile
docs/html/: index.html
docs/latex/: refman.tex
include/: circle2.h  geometry.h  line2.h  point2.h
src/: circle2.cpp  line2.cpp  point2.cpp
tests/: geometrytest.cpp
